--- a/src/main/resources/fxml/MainWindowPane.fxml
+++ b/src/main/resources/fxml/MainWindowPane.fxml
@@ -39,9 +39,9 @@
       </VBox>
    </left>
    <center>
-      <VBox alignment="CENTER" minHeight="200.0" style="-fx-border-color: red;" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" minHeight="200.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox fx:id="centralBorderPane" alignment="CENTER" style="-fx-border-color: black;">
+            <HBox fx:id="centralBorderPane" alignment="CENTER">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
