--- a/src/main/resources/fxml/TaxiInitialPane.fxml
+++ b/src/main/resources/fxml/TaxiInitialPane.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" style="-fx-border-color: green;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" prefWidth="600.0" text="Witamy w systemie do zarządzania taksówkami" textAlignment="CENTER">
          <font>
